# CodePilot-Review

./: .env.example  .git-commit-msg.txt  .gitignore  PROGRESS.md  README.md  刘育林_大模型应用开发_简历.md
agents/: prd.json  prd.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  reviews.py
backend/app/context/: __init__.py  collector.py  heuristics.py  models.py
backend/app/core/: config.py  logger.py
backend/app/llm/: __init__.py  base.py  fallback.py  openai_compatible.py  prompts.py
backend/app/providers/: base.py  errors.py  github.py  mock_github.py
backend/app/schemas/: common.py  github.py  patch.py  review.py
backend/app/services/: patch_suggestion_service.py  patch_validator.py  pr_parser.py  review_comment_service.py  review_service.py
backend/app/storage/: memory_store.py
backend/app/workflows/: review_graph.py  review_state.py
backend/app/workflows/nodes/: __init__.py  assemble_report.py  collect_context.py  detect_risks.py  fetch_mock_pr.py  generate_mock_review.py  generate_suggestions.py  generate_summary.py  guardrail_check.py  parse_pr_url.py
backend/tests/: test_context_collector.py  test_github_provider.py  test_health.py  test_llm_fallback.py  test_patch_suggestion_service.py  test_patch_validator.py  test_pr_parser.py  test_review_comments.py  test_review_graph.py  test_reviews.py
docs/: demo-script.md  final-checklist.md  model-context-strategy.md
docs/plans/: day1-development.md  day2-development.md  day3-development.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  (+1 more)
(+17 files in other folders)
